<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AlumnesFragment">

        <EditText
            android:id="@+id/nom"
            android:layout_width="380dp"
            android:layout_height="59dp"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:text="@string/nomAlumne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.354"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nota"
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nota"
            android:inputType="text"
            android:text="@string/nota"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grup" />

        <EditText
            android:id="@+id/grup"
            android:layout_width="379dp"
            android:layout_height="64dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/grup"
            android:inputType="text"
            android:text="@string/grup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nom"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintBounds" />

        <Button
            android:id="@+id/button_afegir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afegir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nota"
            app:layout_constraintVertical_bias="0.282"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>